helm/workloads/echo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: echo-server
  labels:
    app.kubernetes.io/name: echo-server
spec:
  selector:
    app.kubernetes.io/name: echo-server
  ports:
    - name: http
      port: 80
      targetPort: http
