helm/workloads/echo-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  namespace: echo-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    geron.io/dns-scope: internal
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - secretName: echo-vasary-tls
      hosts:
        - echo.vasary.org
  rules:
    - host: echo.vasary.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  name: http
